[workspace]
members = ["contracts", "lang"]

exclude = ["examples", "example_project_structure", "mocks"]

[package]
name = "pendzl"
version = "0.1.0"
authors = [
    "Brushfam <green@727.ventures>, Konrad Wierzbik <konrad.wierzbik@gmail.com> Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://github.com/Pendzl/pendzl"
keywords = ["wasm", "pendzl", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
] }

pendzl_contracts = { version = "0.1.0", path = "contracts", default-features = false }
pendzl_lang = { version = "0.1.0", path = "lang", default-features = false }

[lib]
name = "pendzl"
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
ink_env = "4.3.0"
trybuild = "1.0.80"
ink_e2e = "4.3.0"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pendzl_contracts/std",
    "pendzl_lang/std",
]
psp22 = ["pendzl_contracts/psp22"]
psp34 = ["pendzl_contracts/psp34"]
psp37 = ["pendzl_contracts/psp37"]
access_control = ["pendzl_contracts/access_control"]
ownable = ["pendzl_contracts/ownable"]
pausable = ["pendzl_contracts/pausable"]
timelock_controller = ["pendzl_contracts/timelock_controller"]
# governance = ["pendzl_contracts/governance", "pendzl_contracts/checkpoints"]
crypto = ["pendzl_contracts/crypto"]
nonces = ["pendzl_contracts/nonces"]
checkpoints = ["pendzl_contracts/checkpoints"]
psp61 = ["pendzl_contracts/psp61"]

test-all = [
    "psp22",
    "psp34",
    "psp37",
    "access_control",
    "ownable",
    "pausable",
    # "timelock_controller",
    # "governance",
    "crypto",
    "nonces",
    "checkpoints",
]

[profile.release]
panic = "abort"
lto = false

[profile.dev]
panic = "abort"
lto = false
overflow-checks = false
