[workspace]
members = ["contracts", "lang"]

exclude = ["examples", "example_project_structure", "mocks"]

[package]
name = "pendzl"
version = "0.1.0-alpha1"
previous-authors = ["Brushfam <green@727.ventures>"]
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com",
    "Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2018"

license = "MIT"
readme = "README.md"
description = "pendzl library for smart contract development on ink!."
keywords = ["wasm", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
] }

pendzl_contracts = { version = "0.1.0-alpha1", path = "contracts", default-features = false }
pendzl_lang = { version = "0.1.0-alpha1", path = "lang", default-features = false }

[lib]
name = "pendzl"
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
ink_env = "5.0.0-rc"
trybuild = "1.0.80"
ink_e2e = "5.0.0-rc"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pendzl_contracts/std",
    "pendzl_lang/std",
]
psp22 = ["pendzl_contracts/psp22"]
vault = ["pendzl_contracts/vault"]
metadata = ["pendzl_contracts/metadata"]
psp34 = ["pendzl_contracts/psp34"]
# # psp37 = ["pendzl_contracts/psp37"]
access_control = ["pendzl_contracts/access_control"]
ownable = ["pendzl_contracts/ownable"]
pausable = ["pendzl_contracts/pausable"]
vesting = ["pendzl_contracts/vesting"]
# timelock_controller = ["pendzl_contracts/timelock_controller"]
# governance = ["pendzl_contracts/governance", "pendzl_contracts/checkpoints"]
# crypto = ["pendzl_contracts/crypto"]
# nonces = ["pendzl_contracts/nonces"]
# checkpoints = ["pendzl_contracts/checkpoints"]
# psp61 = ["pendzl_contracts/psp61"]

test-all = [
    "psp22",
    "psp34",
    # "psp37",
    "access_control",
    "ownable",
    "pausable",
    "vesting",
    # "timelock_controller",
    # "governance",
    # "crypto",
    # "nonces",
    # "checkpoints",
]

[profile.release]
panic = "abort"
lto = false

[profile.dev]
panic = "abort"
lto = false
