[workspace]
members = ["contracts", "lang"]

exclude = ["examples", "tests/contracts"]

[package]
name = "pendzl"
version = "0.2.3"
previous-authors = ["Brushfam <green@727.ventures>"]
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com",
    "Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2018"

license = "MIT"
readme = "README.md"
description = "pendzl library for smart contract development on ink!."
keywords = ["wasm", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
] }

pendzl_contracts = { version = "0.2.3", path = "contracts", default-features = false }
pendzl_lang = { version = "0.2.3", path = "lang", default-features = false }

[lib]
name = "pendzl"
path = "src/lib.rs"
crate-type = ["rlib"]

[dev-dependencies]
ink_env = "5.0.0"
trybuild = "1.0.80"
ink_e2e = "5.0.0"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pendzl_contracts/std",
    "pendzl_lang/std",
]

psp22 = ["pendzl_contracts/psp22"]
psp22_mintable = ["pendzl_contracts/psp22_mintable"]
psp22_burnable = ["pendzl_contracts/psp22_burnable"]
psp22_metadata = ["pendzl_contracts/psp22_metadata"]
psp22_vault = ["pendzl_contracts/psp22_vault"]
psp34 = ["pendzl_contracts/psp34"]
psp34_mintable = ["pendzl_contracts/psp34_mintable"]
psp34_burnable = ["pendzl_contracts/psp34_burnable"]
psp34_metadata = ["pendzl_contracts/psp34_metadata"]
access_control = ["pendzl_contracts/access_control"]
ownable = ["pendzl_contracts/ownable"]
set_code_hash = ["pendzl_contracts/set_code_hash"]
pausable = ["pendzl_contracts/pausable"]
general_vest = ["pendzl_contracts/general_vest"]
psp22_impl = ["pendzl_contracts/psp22_impl"]
psp22_mintable_impl = ["pendzl_contracts/psp22_mintable_impl"]
psp22_burnable_impl = ["pendzl_contracts/psp22_burnable_impl"]
psp22_metadata_impl = ["pendzl_contracts/psp22_metadata_impl"]
psp22_vault_impl = ["pendzl_contracts/psp22_vault_impl"]
psp34_impl = ["pendzl_contracts/psp34_impl"]
psp34_mintable_impl = ["pendzl_contracts/psp34_mintable_impl"]
psp34_burnable_impl = ["pendzl_contracts/psp34_burnable_impl"]
psp34_metadata_impl = ["pendzl_contracts/psp34_metadata_impl"]
access_control_impl = ["pendzl_contracts/access_control_impl"]
ownable_impl = ["pendzl_contracts/ownable_impl"]
pausable_impl = ["pendzl_contracts/pausable_impl"]
set_code_hash_impl = ["pendzl_contracts/set_code_hash_impl"]
general_vest_impl = ["pendzl_contracts/general_vest_impl"]
provide_vest_schedule_info = ["pendzl_contracts/provide_vest_schedule_info"]

test-all = [
    "psp22",
    "psp22_impl",
    "psp22_mintable",
    "psp22_mintable_impl",
    "psp22_burnable",
    "psp22_burnable_impl",
    "psp22_metadata",
    "psp22_metadata_impl",
    "psp22_vault",
    "psp22_vault_impl",
    "psp34",
    "psp34_impl",
    "psp34_mintable",
    "psp34_mintable_impl",
    "psp34_burnable",
    "psp34_burnable_impl",
    "psp34_metadata",
    "psp34_metadata_impl",
    "access_control",
    "access_control_impl",
    "ownable",
    "ownable_impl",
    "pausable",
    "pausable_impl",
    "general_vest",
    "general_vest_impl",
    "provide_vest_schedule_info",
]

[profile.release]
panic = "abort"
lto = false

[profile.dev]
panic = "abort"
lto = false
