[package]
name = "pendzl_contracts"
version = "0.2.4"
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com>",
    "Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

license = "MIT"
readme = "README.md"
description = "Reusable implementations of contracts and traits for interaction with them."
keywords = ["wasm", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
ink = { version = "5.0.0", default-features = false }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

pendzl = { version = "0.2.4", package = "pendzl_lang", path = "../lang", default-features = false, features = [

] }

[lib]
name = "pendzl_contracts"
path = "src/lib.rs"
crate-type = ["rlib"]
features = ['access_control']

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "pendzl/std"]
psp22 = []
psp22_mintable = ["psp22"]
psp22_burnable = ["psp22"]
psp22_metadata = []
psp22_vault = ["psp22"]
psp34 = []
psp34_mintable = ["psp34"]
psp34_burnable = ["psp34"]
psp34_metadata = []
access_control = []
ownable = []
set_code_hash = []
pausable = []
general_vest = ["psp22"]
psp22_impl = ["psp22"]
psp22_mintable_impl = ["psp22_impl", "psp22_mintable"]
psp22_burnable_impl = ["psp22_impl", "psp22_burnable"]
psp22_metadata_impl = ["psp22_impl", "psp22_metadata"]
psp22_vault_impl = ["psp22_impl", "psp22_vault"]
psp34_impl = ["psp34"]
psp34_mintable_impl = ["psp34_impl", "psp34_mintable"]
psp34_burnable_impl = ["psp34_impl", "psp34_burnable"]
psp34_metadata_impl = ["psp34_impl", "psp34_metadata"]
access_control_impl = ["access_control"]
ownable_impl = ["ownable"]
pausable_impl = ["pausable"]
general_vest_impl = ["psp22", "general_vest"]
provide_vest_schedule_info = ["psp22"]
set_code_hash_impl = ["set_code_hash"]

test-all = [
    "psp22_impl",
    "psp22_mintable_impl",
    "psp22_burnable_impl",
    "psp22_metadata_impl",
    "psp22_vault_impl",
    "psp34_impl",
    "psp34_mintable_impl",
    "psp34_burnable_impl",
    "psp34_metadata_impl",
    "access_control_impl",
    "ownable_impl",
    "pausable_impl",
    "general_vest_impl",
    "provide_vest_schedule_info",
]

# [doc]
# # Specify the target specifically for documentation
# [doc.target.'cfg(feature = "access_control")']
# # Specify additional features for documentation
# features = ["access_control"]
