[package]
name = "my_ownable"
version = "4.0.0-beta.1"
authors = [
    "Green Baneling <unknown>, Konrad Wierzbik <konrad.wierzbik@gmail.com>, Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
pendzl = { path = "../..", default-features = false, features = [
    "ownable",
    "psp37",
] }

[dev-dependencies]
ink_e2e = "4.3.0"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
name = "my_ownable"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
