[package]
name = "my_pausable"
version = "0.2.4-v1calls2"
previous-authors = ["Brushfam <green@727.ventures>"]
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com",
    "Åukasz Åakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
pendzl = { path = "../..", default-features = false, features = [
    "pausable_impl",
] }

[dev-dependencies]
ink_e2e = "5.0.0"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
name = "my_pausable"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
