[package]
name = "test_helpers"
version = "0.1.0-alpha2"
authors = [
    " Brushfam <varex.silver@727.ventures> (old author), Konrad Wierzbik <konrad.wierzbik@gmail.com> ",
]
edition = "2021"

[dependencies]
subxt-signer = { version = "0.32.1" }

[lib]
name = "test_helpers"
path = "lib.rs"

[profile.dev]
codegen-units = 16
