[package]
name = "pendzl_lang_codegen"
version = "0.2.4"
previous-authors = ["Brushfam <green@727.ventures>"]
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com>",
    "Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

license = "MIT"
description = "pendzl codegeneration for macros in `pendzl_lang_macro`."
keywords = ["wasm", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1.0.64"
fs2 = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.13.1"
unwrap = "1.2.1"
blake2 = "0.10.6"
heck = "0.3.1"
ink_ir = { version = "4.2.1", default-features = false }
ink_primitives = { version = "4.2.1", default-features = false }
synstructure = "0.12"

[lib]
name = "pendzl_lang_codegen"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = []
