[package]
name = "pendzl_lang_macro"
version = "0.2.4"
previous-authors = ["Brushfam <green@727.ventures>"]
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com>",
    "Łukasz Łakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

license = "MIT"
description = "pendzl macros to extend functionality of the ink!."
keywords = ["wasm", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
pendzl_lang_codegen = { version = "0.2.4", path = "../codegen", default-features = false }
syn = "1"
proc-macro2 = "1"
synstructure = "0.12"

[dev-dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
] }

pendzl = { package = "pendzl_lang", path = "..", default-features = false }

[lib]
name = "pendzl_lang_macro"
path = "src/lib.rs"
proc-macro = true

[features]
default = ["std"]
std = ["pendzl_lang_codegen/std"]
