[package]
name = "my_psp22_vault"
version = "0.2.3"
authors = [
    "Konrad Wierzbik <konrad.wierzbik@gmail.com",
    "Åukasz Åakomy <wookie.xp.07@gmail.com>",
]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
], optional = true }
ethnum = { version = "1.5", default-features = false }

# These dependencies
pendzl = { path = "../../..", default-features = false, features = [
    "psp22_vault_impl",
    "psp22_metadata_impl",
] }

[dev-dependencies]
ink_e2e = "5.0.0"
test_helpers = { path = "../../test_helpers", default-features = false }
my_psp22_metadata = { path = "../metadata", default-features = false }
my_psp22_mintable = { path = "../mintable", default-features = false }

[lib]
name = "my_psp22_vault"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []


[profile.dev]
codegen-units = 16
panic = "abort"
lto = false
[profile.release]
panic = "abort"
lto = false
